# mbed-os

./: .astylerc  .mergify.yml  .travis.yml  CMakeLists.txt  cmake-naming.md  codeowners.json  dummy_cmake.cpp  mbed.h  readme-cmake-obj-libs.md
.github/: CODEOWNERS
cmake/: app.cmake  profile.cmake  toolchain.cmake
cmake/cores/: Cortex-M0+.cmake  Cortex-M1.cmake  Cortex-M23-NS.cmake  Cortex-M23.cmake  Cortex-M3.cmake  Cortex-M33-NS.cmake  Cortex-M33.cmake  Cortex-M33F-NS.cmake  Cortex-M33F.cmake  Cortex-M33FE-NS.cmake  Cortex-M33FE.cmake
cmake/toolchain_profiles/: arm_develop.cmake  gcc_arm_develop.cmake
cmake/toolchains/: ARM.cmake
cmsis/: CMakeLists.txt
cmsis/CMSIS_5/CMSIS/RTOS2/RTX/: CMakeLists.txt
cmsis/CMSIS_5/CMSIS/TARGET_CORTEX_A/: CMakeLists.txt
cmsis/CMSIS_5/CMSIS/TARGET_CORTEX_M/: CMakeLists.txt
cmsis/TARGET_CORTEX_A/: CMakeLists.txt
cmsis/TARGET_CORTEX_M/: CMakeLists.txt
cmsis/device/: CMakeLists.txt
cmsis/device/RTE/: CMakeLists.txt
cmsis/device/rtos/: CMakeLists.txt
connectivity/: CMakeLists.txt
connectivity/FEATURE_BLE/source/: CMakeLists.txt
connectivity/FEATURE_BLE/source/generic/: CMakeLists.txt
connectivity/cellular/: CMakeLists.txt
connectivity/drivers/ble/FEATURE_BLE/TARGET_Ambiq_Micro/TARGET_Apollo3/: CMakeLists.txt
connectivity/drivers/ble/FEATURE_BLE/TARGET_NORDIC/TARGET_NORDIC_CORDIO/TARGET_NRF5x/: CMakeLists.txt
connectivity/drivers/emac/: CMakeLists.txt
connectivity/drivers/emac/TARGET_STM/TARGET_STM32F4/TARGET_ARCH_MAX/: CMakeLists.txt
connectivity/drivers/emac/TARGET_STM/TARGET_STM32F4/TARGET_NUCLEO_F429ZI/: CMakeLists.txt
connectivity/drivers/emac/TARGET_STM/TARGET_STM32F4/TARGET_NUCLEO_F439ZI/: CMakeLists.txt
connectivity/drivers/mbedtls/FEATURE_CRYPTOCELL310/: CMakeLists.txt
connectivity/drivers/mbedtls/TARGET_STM/: CMakeLists.txt
connectivity/libraries/nanostack-libservice/: CMakeLists.txt
connectivity/lorawan/: CMakeLists.txt
connectivity/mbedtls/: CMakeLists.txt
connectivity/netsocket/: CMakeLists.txt
docs/: cmsis_rtx.md
drivers/: CMakeLists.txt
drivers/tests/TESTS/mbed_drivers/: CMakeLists.txt
drivers/tests/TESTS/mbed_drivers/buffered_serial/: CMakeLists.txt
drivers/tests/TESTS/mbed_drivers/c_strings/: CMakeLists.txt
events/: CMakeLists.txt
events/source/: equeue_mbed.cpp
events/tests/TESTS/events/: CMakeLists.txt
events/tests/TESTS/events/equeue/: CMakeLists.txt
events/tests/TESTS/events/queue/: CMakeLists.txt
events/tests/TESTS/events/timing/: CMakeLists.txt
features/lorawan/: LoRaRadio.h  LoRaWANBase.h  LoRaWANInterface.cpp  LoRaWANInterface.h  LoRaWANStack.cpp  LoRaWANStack.h  astyle-branch.out  astyle-branch2.out  lorawan_types.h
features/netsocket/: DTLSSocket.h  TLSSocketWrapper.h
hal/: CMakeLists.txt  targets.json
hal/TARGET_FLASH_CMSIS_ALGO/: CMakeLists.txt
hal/common/: critical.c
hal/targets/cmsis/TARGET_STM/TARGET_STM32F4/TARGET_UBLOX_C029/TOOLCHAIN_ARM_STD/: stm32f439xx.sct
hal/targets/hal/TARGET_STM/TARGET_STM32F4/TARGET_UBLOX_C029/: PinNames.h
hal/usb/: CMakeLists.txt
platform/: CMakeLists.txt  mbed_lib.json  mbed_stats.h
platform/FEATURE_EXPERIMENTAL_API/FEATURE_PSA/: CMakeLists.txt
platform/cxxsupport/: CMakeLists.txt
platform/mbed-trace/: CMakeLists.txt
platform/source/: CMakeLists.txt  SysTimer.cpp  mbed_error.c
platform/source/TARGET_CORTEX_A/: CMakeLists.txt
platform/source/TARGET_CORTEX_M/: CMakeLists.txt
platform/source/minimal-printf/: CMakeLists.txt
rtos/: CMakeLists.txt
rtos/rtx/TARGET_CORTEX_M/: RTX_CM_lib.h  RTX_Conf_CM.c
rtos/source/: Kernel.cpp  Semaphore.cpp  ThisThread.cpp
rtos/source/TARGET_CORTEX/: CMakeLists.txt  mbed_rtx_handlers.c  mbed_rtx_idle.cpp
rtos/source/TARGET_CORTEX/rtx5/: CMakeLists.txt
rtos/source/TARGET_CORTEX/rtx5/RTX/: CMakeLists.txt
storage/: CMakeLists.txt
targets/: CMakeLists.txt  targets.json
targets/Freescale/: CMakeLists.txt
targets/Freescale/MCUXpresso_MCUS/: CMakeLists.txt
targets/Freescale/MCUXpresso_MCUS/MCU_K64F/: CMakeLists.txt
targets/Freescale/MCUXpresso_MCUS/MCU_K64F/FRDM/: CMakeLists.txt
targets/Freescale/MCUXpresso_MCUS/MCU_K64F/device/: CMakeLists.txt
targets/TARGET_Analog_Devices/: mbed_rtx.h
targets/TARGET_Cypress/TARGET_PSOC6/TARGET_CY8CKIT064B0S2_4343W/: CMakeLists.txt
targets/TARGET_Cypress/TARGET_PSOC6/TARGET_CYSBSYSKIT_01/: CMakeLists.txt
targets/TARGET_Cypress/TARGET_PSOC6/TARGET_CYTFM_064B0S2_4343W/: CMakeLists.txt
targets/TARGET_Freescale/: CMakeLists.txt  USBPhy_Kinetis.cpp
targets/TARGET_Freescale/TARGET_MCUXpresso_MCUS/: CMakeLists.txt
targets/TARGET_Freescale/TARGET_MCUXpresso_MCUS/TARGET_MCU_K64F/: CMakeLists.txt
targets/TARGET_Freescale/TARGET_MCUXpresso_MCUS/TARGET_MCU_K64F/TARGET_FRDM/: CMakeLists.txt
targets/TARGET_Freescale/TARGET_MCUXpresso_MCUS/TARGET_MCU_K64F/device/: CMakeLists.txt
targets/TARGET_Maxim/: CMakeLists.txt
targets/TARGET_Maxim/TARGET_MAX32620C/: CMakeLists.txt
targets/TARGET_Maxim/TARGET_MAX32620C/TARGET_MAX32620FTHR/: CMakeLists.txt
targets/TARGET_Maxim/TARGET_MAX32630/: CMakeLists.txt
targets/TARGET_Maxim/TARGET_MAX32630/TARGET_MAX32630FTHR/: CMakeLists.txt
targets/TARGET_NORDIC/TARGET_NRF5/: lp_ticker.c  spi_api.c  us_ticker.c
targets/TARGET_NORDIC/TARGET_NRF5/TARGET_MCU_NRF52840/sdk/: sdk_config.h
targets/TARGET_NORDIC/TARGET_NRF5x/TARGET_NRF52/: objects.h
targets/TARGET_ONSEMI/TARGET_NCS36510/: ncs36510_us_ticker_api.c
targets/TARGET_STM/TARGET_STM32F4/: analogin_api.c
targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F429xI/TARGET_NUCLEO_F429ZI/: PeripheralPins.c
targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F437xG/TARGET_UBLOX_C030/: PeripheralPins.c
targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F439xI/TARGET_UBLOX_EVK_ODIN_W2/: PeripheralNames.h
targets/TARGET_STM/TARGET_STM32F4/TARGET_STM32F439xI/device/: flash_api.c
targets/TARGET_STM/TARGET_STM32L1/TARGET_NUCLEO_L152RE/device/: hal_tick.h
targets/TARGET_STM/TARGET_STM32WB/: CMakeLists.txt
targets/TARGET_Silicon_Labs/TARGET_EFM32/common/: objects.h
tools/: build_api.py  paths.py
(+46 files in other folders)
