# SPDX-License-Identifier: Apache-2.0

add_library(drivers STATIC)

target_link_libraries(drivers PUBLIC cmsis target platform gen_config)

target_sources(drivers PRIVATE internal/AsyncOp.h)
target_sources(drivers PRIVATE internal/ByteBuffer.h)
target_sources(drivers PRIVATE internal/EndpointResolver.h)
target_sources(drivers PRIVATE internal/LinkedList.h)
target_sources(drivers PRIVATE internal/LinkedListBase.h)
target_sources(drivers PRIVATE internal/LinkEntry.h)
target_sources(drivers PRIVATE internal/MIDIMessage.h)
target_sources(drivers PRIVATE internal/OperationList.h)
target_sources(drivers PRIVATE internal/OperationListBase.h)
target_sources(drivers PRIVATE internal/PolledQueue.h)
target_sources(drivers PRIVATE internal/SFDP.h)
target_sources(drivers PRIVATE internal/Task.h)
target_sources(drivers PRIVATE internal/TaskBase.h)
target_sources(drivers PRIVATE internal/TaskQueue.h)
target_sources(drivers PRIVATE internal/USBAudio_Types.h)
target_sources(drivers PRIVATE internal/USBDescriptor.h)
target_sources(drivers PRIVATE internal/USBDevice.h)
target_sources(drivers PRIVATE internal/USBDevice_Types.h)
target_sources(drivers PRIVATE internal/USBHID_Types.h)

target_sources(drivers PRIVATE source/AnalogIn.cpp)
target_sources(drivers PRIVATE source/AnalogOut.cpp)
target_sources(drivers PRIVATE source/BufferedSerial.cpp)
target_sources(drivers PRIVATE source/BusIn.cpp)
target_sources(drivers PRIVATE source/BusInOut.cpp)
target_sources(drivers PRIVATE source/BusOut.cpp)
target_sources(drivers PRIVATE source/CAN.cpp)
target_sources(drivers PRIVATE source/DigitalIn.cpp)
target_sources(drivers PRIVATE source/DigitalInOut.cpp)
target_sources(drivers PRIVATE source/DigitalOut.cpp)
target_sources(drivers PRIVATE source/FlashIAP.cpp)
target_sources(drivers PRIVATE source/I2C.cpp)
target_sources(drivers PRIVATE source/I2CSlave.cpp)
target_sources(drivers PRIVATE source/InterruptIn.cpp)
target_sources(drivers PRIVATE source/MbedCRC.cpp)
target_sources(drivers PRIVATE source/PortIn.cpp)
target_sources(drivers PRIVATE source/PortInOut.cpp)
target_sources(drivers PRIVATE source/PortOut.cpp)
target_sources(drivers PRIVATE source/PwmOut.cpp)
target_sources(drivers PRIVATE source/QSPI.cpp)
target_sources(drivers PRIVATE source/RawSerial.cpp)
target_sources(drivers PRIVATE source/ResetReason.cpp)
target_sources(drivers PRIVATE source/Serial.cpp)
target_sources(drivers PRIVATE source/Serial.cpp)
target_sources(drivers PRIVATE source/SerialWireOutput.cpp)
target_sources(drivers PRIVATE source/SFDP.cpp)
target_sources(drivers PRIVATE source/SPI.cpp)
target_sources(drivers PRIVATE source/SPISlave.cpp)
target_sources(drivers PRIVATE source/Timeout.cpp)
target_sources(drivers PRIVATE source/Timer.cpp)
target_sources(drivers PUBLIC source/TimerEvent.cpp)
target_sources(drivers PRIVATE source/UARTSerial.cpp)
target_sources(drivers PRIVATE source/UnbufferedSerial.cpp)
target_sources(drivers PRIVATE source/Watchdog.cpp)
target_sources(drivers PRIVATE source/Watchdog.cpp)

#target_sources(drivers PRIVATE source/usb/AsyncOp.cpp)
#target_sources(drivers PRIVATE source/usb/ByteBuffer.cpp)
#target_sources(drivers PRIVATE source/usb/EndpointResolver.cpp)
#target_sources(drivers PRIVATE source/usb/LinkedListBase.cpp)
#target_sources(drivers PRIVATE source/usb/OperationListBase.cpp)
#target_sources(drivers PRIVATE source/usb/PolledQueue.cpp)
#target_sources(drivers PRIVATE source/usb/TaskBase.cpp)
#target_sources(drivers PRIVATE source/usb/USBAudio.cpp)
#target_sources(drivers PRIVATE source/usb/USBCDC.cpp)
#target_sources(drivers PRIVATE source/usb/USBCDC_ECM.cpp)
#target_sources(drivers PRIVATE source/usb/USBDevice.cpp)
#target_sources(drivers PRIVATE source/usb/USBHID.cpp)
#target_sources(drivers PRIVATE source/usb/USBKeyboard.cpp)
#target_sources(drivers PRIVATE source/usb/USBMIDI.cpp)
#target_sources(drivers PRIVATE source/usb/USBMouse.cpp)
#target_sources(drivers PRIVATE source/usb/USBMouseKeyboard.cpp)
#target_sources(drivers PRIVATE source/usb/USBMSD.cpp)
#target_sources(drivers PRIVATE source/usb/USBSerial.cpp)

target_include_directories(drivers PUBLIC .)
# TODO: enable drivers/ include in files within this module
target_include_directories(drivers PUBLIC ..)
target_include_directories(drivers PUBLIC internal)
