# SPDX-License-Identifier: Apache-2.0

add_library(hal STATIC)
target_link_libraries(hal PUBLIC cmsis platform target gen_config)

target_sources(hal PRIVATE analogin_api.h)
target_sources(hal PRIVATE analogout_api.h)
target_sources(hal PRIVATE buffer.h)
target_sources(hal PRIVATE can_api.h)
target_sources(hal PRIVATE can_helper.h)
target_sources(hal PRIVATE crc_api.h)
target_sources(hal PRIVATE critical_section_api.h)
target_sources(hal PRIVATE dma_api.h)
target_sources(hal PRIVATE ethernet_api.h)
target_sources(hal PRIVATE flash_api.h)
target_sources(hal PRIVATE gpio_api.h)
target_sources(hal PRIVATE gpio_irq_api.h)
target_sources(hal PRIVATE i2c_api.h)
target_sources(hal PRIVATE itm_api.h)
target_sources(hal PRIVATE LowPowerTickerWrapper.cpp)
target_sources(hal PRIVATE LowPowerTickerWrapper.h)
target_sources(hal PRIVATE lp_ticker_api.h)
target_sources(hal PRIVATE mbed_compat.c)
target_sources(hal PRIVATE mbed_critical_section_api.c)
target_sources(hal PRIVATE mbed_flash_api.c)
target_sources(hal PRIVATE mbed_gpio.c)
target_sources(hal PRIVATE mbed_gpio_irq.c)
target_sources(hal PRIVATE mbed_itm_api.c)
target_sources(hal PRIVATE mbed_lp_ticker_api.c)
target_sources(hal PRIVATE mbed_lp_ticker_wrapper.cpp)
target_sources(hal PRIVATE mbed_lp_ticker_wrapper.h)
target_sources(hal PRIVATE mbed_pinmap_common.c)
target_sources(hal PRIVATE mbed_pinmap_default.cpp)
target_sources(hal PRIVATE mbed_ticker_api.c)
target_sources(hal PRIVATE mbed_us_ticker_api.c)
target_sources(hal PRIVATE mpu_api.h)
target_sources(hal PRIVATE pinmap.h)
target_sources(hal PRIVATE port_api.h)
target_sources(hal PRIVATE pwmout_api.h)
target_sources(hal PRIVATE qspi_api.h)
target_sources(hal PRIVATE reset_reason_api.h)
target_sources(hal PRIVATE rtc_api.h)
target_sources(hal PRIVATE serial_api.h)
target_sources(hal PRIVATE sleep_api.h)
target_sources(hal PRIVATE spi_api.h)
target_sources(hal PRIVATE spm_api.h)
target_sources(hal PRIVATE static_pinmap.cpp)
target_sources(hal PRIVATE static_pinmap.h)
target_sources(hal PRIVATE ticker_api.h)
target_sources(hal PRIVATE trng_api.h)
target_sources(hal PRIVATE us_ticker_api.h)
target_sources(hal PRIVATE watchdog_api.h)

target_sources(hal PRIVATE mpu/mbed_mpu_v7m.c)
target_sources(hal PRIVATE mpu/mbed_mpu_v8m.c)

target_sources(hal PRIVATE usb/USBPhy.h)
target_sources(hal PRIVATE usb/USBPhyEvents.h)
target_sources(hal PRIVATE usb/USBPhyTypes.h)
target_sources(hal PRIVATE usb/usb_phy_api.h)

target_include_directories(hal PUBLIC .)
target_include_directories(hal PUBLIC usb)
# TODO: enable drivers/ include in files within this module
target_include_directories(drivers PUBLIC ..)

